# json-prettier

./: DEVELOPMENT.md  INSTALLATION.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Modals.tsx
src/hooks/: useKeyboardShortcuts.tsx
src/utils/: constants.tsx  editorUtils.tsx
